--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,58 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;600;700&display=swap');
+
 .App {
   font-family: sans-serif;
   text-align: center;
+}
+
+*, *::before, *::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: black;
+}
+
+.homeHeaders {
+  font-size: 90px;
+  font-weight: bold;
+  color: #fff; /* White color */
+  font-family: "Inter", sans-serif; /* Font family */
+}
+
+.ourStoryHeaders {
+  font-size: 50px;
+  /* font-weight: bold; */
+  color: #fff; /* White color */
+  font-family: "Inter", sans-serif; /* Font family */
+}
+
+.aboutHeaders {
+  font-size: 50px;
+  font-weight: bold;
+  color: #fff; /* White color */
+  font-family: "Inter", sans-serif; /* Font family */
+}
+
+.faqQuestions {
+  font-size: 25px;
+  font-weight: bold;
+  color: #fff; /* White color */
+  font-family: "Inter", sans-serif; /* Font family */
+}
+
+.faqAnswers {
+  font-size: 16px;
+  font-weight: bold;
+  color: #fff; /* White color */
+  font-family: "Inter", sans-serif; /* Font family */
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 1200px
 }
