--- a/src/components/Accordion/Accordion.css
+++ b/src/components/Accordion/Accordion.css
@@ -3,8 +3,12 @@
   max-height: 0;
   transition: max-height 0.2s ease-out;
   background-color: #323232;
+  color: #fff;
+  border-radius: 20px;
+  text-align: left;
 }
 
 .accordion-content.open {
   max-height: 500px; /* You can adjust this as needed */
+  padding: 50px 175px;
 }
