--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,245 +1,284 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-  #DROPDOWNBUTTON
+.container {
+  width: 1100px;
+}
 
-  /* The dropdown container */
+.header-layout {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.header-section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.nav-layout {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.nav-link {
+  margin-right: 30px;
+}
+
+.nav-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #000;
+  color: #fff;
+  border-radius: 20px;
+  padding: 10px;
+  margin: 0 10px
+}
+
+/* The dropdown container */
 .dropdown {
-    float: left;
-    overflow: hidden;
-  }
-  
-  /* Dropdown button */
-  .dropdown .dropbtn {
-    font-size: 16px;
-    border: none;
-    outline: none;
-    color: white;
-    padding: 14px 16px;
-    background-color: inherit;
-    font-family: inter; /* Important for vertical align on mobile phones */
-    margin: 0; /* Important for vertical align on mobile phones */
-  }
-  
-  /* Add a red background color to navbar links on hover */
-  .navbar a:hover, .dropdown:hover .dropbtn {
-    background-color: red;
-  }
-  
-  /* Dropdown content (hidden by default) */
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  /* Links inside the dropdown */
-  .dropdown-content a {
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: center;
-    font-family: inter;
-  }
-  
-  /* Add a grey background color to dropdown links on hover */
-  .dropdown-content a:hover {
-    background-color: #cac7c7;
-    border-radius: 20;  
-  }
-  
-  /* Show the dropdown menu on hover */
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
-  
-  ul {
-    list-style: none;
-  }
-  
-  a {
-    text-decoration: none;
-    color: inherit;
-  }
-  
-  button {
-    background: none;
-    border: none;
-    font: inherit;
-    color: inherit;
-  }
-  
+  float: left;
+  overflow: hidden;
+}
 
-  /* NORMAL STYLES */
-  .header {
-    width: 100%;
-  } 
-  
-  .icon {
-    margin-right: 3px;
-    color: rgba(255, 255, 255, 0.17);
-  }
-  
-  .bottom-bar {
-    background-color: white;
-  }
-  
-  .bottom-bar__content {
-    height: 100px;
-    max-width: 1200px;
-    padding: 0 30px;
-    margin: 0 auto;  
-    display: flex;
-    /* justify-content: space-between; */
-    align-items: center;
-  }
-  
-  .logo {
-    vertical-align: middle;
-    display: flex;
-    column-gap: 30px;
-    align-items: center;
-  }
-  
-  .logo__img {
-    height: 50px;
-    margin-right: 30px
-  }
-  
-  .logo__text {
-    font-size: 20px;
-    color: black;
-    font-weight: 500;
-    letter-spacing: -0.5px;
-  }
-  
+/* Dropdown button */
+.dropdown .dropbtn {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inter; /* Important for vertical align on mobile phones */
+  margin: 0; /* Important for vertical align on mobile phones */
+}
+
+/* Add a red background color to navbar links on hover */
+.navbar a:hover,
+.dropdown:hover .dropbtn {
+  background-color: red;
+}
+
+/* Dropdown content (hidden by default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: center;
+  font-family: inter;
+}
+
+/* Add a grey background color to dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #cac7c7;
+  border-radius: 20;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+button {
+  background: none;
+  border: none;
+  font: inherit;
+  color: inherit;
+}
+
+/* NORMAL STYLES */
+.header {
+  display: flex;
+  justify-content: center;
+  background: white;
+  height: 100px;
+}
+
+.icon {
+  margin-right: 3px;
+  color: rgba(255, 255, 255, 0.17);
+}
+
+.bottom-bar {
+  background-color: white;
+}
+
+.bottom-bar__content {
+  height: 100px;
+  max-width: 1200px;
+  padding: 0 30px;
+  margin: 0 auto;
+  display: flex;
+  /* justify-content: space-between; */
+  align-items: center;
+}
+
+/* .logo {
+  vertical-align: middle;
+  column-gap: 30px;
+  align-items: center;
+} */
+
+.logo__img {
+  height: 50px;
+  /* margin-right: 30px; */
+}
+
+.logo__text {
+  font-size: 20px;
+  color: black;
+  font-weight: 500;
+  letter-spacing: -0.5px;
+}
+
+.nav {
+  transition: all 0.3s ease-in-out;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.nav__list {
+  display: flex;
+  column-gap: 70px;
+}
+
+.nav__item {
+}
+
+.nav__link {
+  color: black;
+  transition: all 0.2s;
+  font-family: Inter;
+}
+
+.nav__link:hover,
+.nav__link:focus {
+  color: black;
+}
+
+.btn {
+  color: #fff;
+  background-color: black;
+  padding: 8px 20px;
+  border-radius: 1000px;
+  text-transform: uppercase;
+  font-size: 12px;
+  font-weight: 600;
+  cursor: pointer;
+  transition: all 0.2s;
+  font-family: inter;
+}
+
+.mail-btn {
+  color: #fff;
+  background-color: black;
+  padding: 8px 20px;
+  border-radius: 1000px;
+  text-transform: uppercase;
+  font-size: 12px;
+  font-weight: 600;
+  cursor: pointer;
+  transition: all 0.2s;
+  font-family: inter;
+}
+
+.btn:hover {
+  background-color: gray;
+}
+
+.hamburger {
+  cursor: pointer;
+  display: none;
+}
+
+.bar {
+  height: 2px;
+  width: 27px;
+  background-color: black;
+  margin: 5px 0;
+  opacity: 0.8;
+  transition: all 0.3s ease-in-out;
+}
+
+/* For JS */
+.nav--open {
+  left: 50% !important;
+}
+
+.hamburger--open .bar:nth-child(1) {
+  transform: translateY(7px) rotate(45deg);
+}
+
+.hamburger--open .bar:nth-child(2) {
+  opacity: 0;
+}
+
+.hamburger--open .bar:nth-child(3) {
+  transform: translateY(-7px) rotate(-45deg);
+}
+
+/* MEDIA QUERIES */
+@media (max-width: 650px) {
   .nav {
-    transition: all 0.3s ease-in-out;
-  }
-  
-  .nav__list {
-    display: flex;
-    column-gap: 70px;
-  }
-  
-  .nav__item {
-    
-  }
-  
-  .nav__link {
-    color: black;
-    transition: all 0.2s;
-    font-family: Inter;
-  }
-  
-  .nav__link:hover,
-  .nav__link:focus {
-    color: black;
-  }
-  
-  .btn {
-    color: #fff;
-    background-color: black;
-    padding: 8px 20px;
-    border-radius: 1000px;
-    text-transform: uppercase;
-    font-size: 12px;
-    font-weight: 600;
-    cursor: pointer;
-    transition: all 0.2s;
-    font-family: inter;
-  }
-  
-  .mail-btn {
-    color: #fff;
-    background-color: black;
-    padding: 8px 20px;
-    border-radius: 1000px;
-    text-transform: uppercase;
-    font-size: 12px;
-    font-weight: 600;
-    cursor: pointer;
-    transition: all 0.2s;
-    font-family: inter;
+    position: fixed;
+    top: 90px;
+    left: -100%;
+    transform: translateX(-50%);
+    background-color: rgb(19, 22, 26);
+    width: 100%;
+    padding: 10px 0 25px;
   }
 
-  .btn:hover {
-    background-color:  gray;
+  .nav__list {
+    flex-direction: column;
+    align-items: center;
+    row-gap: 20px;
   }
-  
+
+  .nav__link {
+    font-size: 14px;
+  }
+
+  .btn {
+    font-size: 11px;
+    padding: 7px 17px;
+  }
+
   .hamburger {
-    cursor: pointer;
-    display: none;
+    display: block;
   }
-  
-  .bar {
-    height: 2px;
-    width: 27px;
-    background-color: black;
-    margin: 5px 0;
-    opacity: 0.8;
-    transition: all 0.3s ease-in-out;
+}
+
+@media (max-width: 360px) {
+  .top-bar__content {
+    font-size: 10px;
   }
-  
-  /* For JS */
-  .nav--open {
-    left: 50% !important;
-  }
-  
-  .hamburger--open .bar:nth-child(1) {
-    transform: translateY(7px) rotate(45deg);
-  }
-  
-  .hamburger--open .bar:nth-child(2) {
-    opacity: 0;
-  }
-  
-  .hamburger--open .bar:nth-child(3) {
-    transform: translateY(-7px) rotate(-45deg);
-  }
-  
-  /* MEDIA QUERIES */
-  @media (max-width: 650px) {
-    .nav {
-      position: fixed;
-      top: 90px;
-      left: -100%;
-      transform: translateX(-50%);
-      background-color: rgb(19, 22, 26);
-      width: 100%;
-      padding: 10px 0 25px;
-    }
-  
-    .nav__list {
-      flex-direction: column;
-      align-items: center;
-      row-gap: 20px;
-    }
-  
-    .nav__link {
-      font-size: 14px;
-    }
-  
-    .btn {
-      font-size: 11px;
-      padding: 7px 17px;
-    }
-  
-    .hamburger {
-      display: block;
-    }
-  }
-  
-  @media (max-width: 360px) {
-    .top-bar__content {
-      font-size: 10px;
-    }
-  }
+}
