--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,117 @@
-.column1 {
-  @media (max-width: 180px) {
-     {
-      width: 90vw;
-    }
-  }
+.footer {
+  background-color: white;
+  width: 100%;
+  height: 500px;
 }
+
+.footercontainer {
+  padding-top: 100px;
+  padding-left: 80px;
+  padding-right: 80px
+}
+
+.row {
+  display: flex;
+}
+
+.column {
+  flex: 1;
+  padding: 10px;
+  border: 1px solid #ccc;
+  height: 300px
+}
+
+.column-text {
+  color: #000;
+  font-family: Helvetica;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  text-align: left;
+}
+
+.column-1 {
+  flex: 2; /* 2/6 of the row */
+}
+
+.row-2 {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+  padding: 5px;
+  color: #bdb8b8;
+  text-align: center;
+  font-family: Helvetica;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 24px; /* 171.429% */
+}
+
+/* CSS */
+.custom-links {
+  color: #C73F39;
+  font-family: Helvetica, sans-serif;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px;
+  text-align: left;
+}
+
+.custom-links ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.custom-links li {
+  line-height: 30px; /* 214.286% */
+}
+
+.custom-links a {
+  text-decoration: none;
+  color: inherit;
+}
+
+/* social media block */
+/* CSS */
+.social-media-block {
+  color: #C73F39;
+  font-family: Helvetica, sans-serif;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px;
+}
+
+.social-media-block ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.social-media-block li {
+  line-height: 30px;
+}
+
+.social-media-block a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.social-links {
+  width: 187px;
+  height: 19px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.social-icon {
+  width: 19px;
+  height: 19px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
