--- a/src/pages/Blog/Blog.css
+++ b/src/pages/Blog/Blog.css
@@ -1,1 +1,84 @@
-import React from 
+.image-link {
+    display: inline-block;
+    position: relative;
+    overflow: hidden;
+    transition: transform 0.3s ease;
+    margin: 24px;
+}
+
+.image-link:hover {
+    transform: scale(1.05);
+}
+
+.image-container {
+    width: 380px; /* default width, which matches the small image */
+}
+
+.image-container img {
+    width: 380px;
+    height: 250px;
+    display: block;
+    transition: transform 0.3s ease;
+    border-top-right-radius: 50px;
+    border-bottom-left-radius: 50px;
+}
+
+.image-link.large .image-container {
+    width: 758px; /* updated this */
+}
+
+.image-link.large .image-container img {
+    width: 758px;
+    height: 444px;
+}
+
+.caption {
+    display: block;
+    width: 100%; /* Ensure it takes the full width of its parent */
+    text-align: left;
+}
+
+.main-caption, .sub-caption {
+    white-space: normal;
+    max-width: 100%; /* ensures the captions don't extend beyond the parent container */
+    text-align: left;
+}
+
+.main-caption {
+    color: #FFF;
+    font-family: 'Inter', sans-serif;
+    font-size: 30px;
+    font-weight: 700;
+    margin-top: 5px;
+    margin-bottom: 8px;
+}
+
+.sub-caption {
+    color: #FFF;
+    font-family: 'Inter', sans-serif;
+    font-size: 20px;
+    font-style: italic;
+    font-weight: 400;
+}
+
+.image-link.large .main-caption {
+    font-size: 40px;
+}
+
+.image-link.large .sub-caption {
+    font-size: 24px;
+}
+
+.main-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.row {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-bottom: 20px;
+}
