--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -106,6 +106,11 @@
   justify-content: left; 
 }
 
+.footer-row2 {
+  flex: 1; 
+  justify-content: left; 
+}
+
 
 .gray-line {
   width: 1100px;
@@ -114,5 +119,77 @@
   opacity: 0.2;
   background: #000;
   margin-bottom: 10px; /* Add 10px spacing between the line and the div */
+}
+
+@media (max-width: 650px) {
+  .gray-line {
+    display: none;
+  }
+
+  .footer {
+    height: auto;
+    padding: 20px; /* Adjust as necessary */
+  }
+  
+  .footercontainer {
+    padding-top: 20px; /* Adjust as necessary */
+    padding-left: 20px; /* Adjust as necessary */
+    padding-right: 20px; /* Adjust as necessary */
+  }
+
+  .row {
+    flex-direction: column;
+    align-items: right;
+  }
+
+  .column {
+    flex: 1;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start; /* Align items to the start */
+    height: 70px;
+  }
+
+  .column-1 {
+    flex: none; /* Reset flex to default value */
+  }
+
+  .social-links {
+    display: flex;
+    justify-content: space-around; /* Updated to space-around for equal spacing */
+    width: 100%; /* Updated width to ensure icons take full space and are spaced evenly */
+  }
+  
+  .social-icon {
+    width: 19px;
+    height: 19px;
+  }
+  
+  .column-text {
+    margin-bottom: 20px;
+    text-align: center;
+  }
+
+  .stump-box {
+    align-items: center; /* Center align items horizontally */
+    height: auto; /* Allow height to adjust to content size */
+  }
+
+  .footer-row2 {
+    justify-content: center; /* Center justify content horizontally */
+  }
+
+  .footer-row {
+    display: none;
+  }
+
+  .row-2 {
+    padding: 10px; /* Add padding to maintain spacing */
+  }
+
+  .social-links {
+    margin-right: 30px; /* Center the social links horizontally */
+  }
 }
 
